create new routes project resume contact update index.css

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: radial-gradient(circle, #1b2735, #090a0f); /* Radial gradient background */
 }
 
 code {
